# credit-risk-intelligence

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  ruff.toml  setup.py
.github/workflows/: ci.yml  drift-check.yml
api/: main.py
app/: streamlit_app.py
data/processed/: drift_baseline.parquet  dropped_cols.json  eda_summary.json  feature_importance.csv  shap_importance.csv
mlflow/: mlflow.db
mlruns/0/: meta.yaml
models/: feature_names.pkl  meta_learner.pkl
models/registry_cache/credit-risk-lgbm-stack_v1/model/artifacts/: feature_names.pkl  lgbm_folds.pkl
monitoring/grafana/dashboards/: credit-risk.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_explainability.ipynb
reports/drift/: latest_summary.json
scripts/: capture_baseline.py  register_model.py  run_drift_report.py  tree_generator.py
src/: explain.py  features.py  metrics.py  model.py  registry.py  utils.py
tests/: test_features.py  test_model.py
